# ConwayGameOfLife

./: .gitignore  CMakeLists.txt  ConwayGameOfLife.rc  ConwayGameOfLife.sln  ConwayGameOfLife.vcxproj  ConwayGameOfLife.vcxproj.filters  GameOfLife.md  README.md  resource.h
data/shaders/: basic_F.glsl
src/: Entity.cpp  Entity.h  Enum.h  Game.cpp  Game.h  GameOfLife.cpp  Icon.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  UglyCam.cpp  UglyCam.h
